Implemented loading of separate views into tab pane

--- a/src/com/buddyware/treefrog/stats/StatsView.fxml
+++ b/src/com/buddyware/treefrog/stats/StatsView.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml">
-	<!-- TODO Add Nodes -->
-</BorderPane>
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.stats.StatsController">
+   <children>
+      <Label layoutX="216.0" layoutY="143.0" text="Stats View widgets go here" />
+   </children>
+</AnchorPane>
