--- a/src/com/buddyware/treefrog/stats/StatsView.fxml
+++ b/src/com/buddyware/treefrog/stats/StatsView.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.stats.StatsController">
+<AnchorPane fx:id="stats_view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.stats.StatsController">
    <children>
-      <Label layoutX="216.0" layoutY="143.0" text="Stats View widgets go here" />
+      <Label layoutX="216.0" layoutY="143.0" onMouseClicked="#testStatsComm" text="Stats View widgets go here" />
    </children>
 </AnchorPane>
