--- a/src/com/buddyware/treefrog/remote/config/RemoteConfigView.fxml
+++ b/src/com/buddyware/treefrog/remote/config/RemoteConfigView.fxml
@@ -7,6 +7,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.remote.config.RemoteConfigController">
    <children>
-      <Label layoutX="187.0" layoutY="193.0" text="Remote Config view" />
+      <Label layoutX="30.0" layoutY="45.0" text="Remote Config view" />
+      <TextField layoutX="95.0" layoutY="164.0" prefHeight="25.0" prefWidth="234.0" />
+      <TextField layoutX="95.0" layoutY="222.0" prefHeight="25.0" prefWidth="234.0" />
+      <Label layoutX="95.0" layoutY="142.0" text="AWS ID" />
+      <Label layoutX="95.0" layoutY="200.0" text="AWS Secret ID" />
+      <Button layoutX="393.0" layoutY="329.0" mnemonicParsing="false" text="Save" />
    </children>
 </AnchorPane>
