--- a/src/com/buddyware/treefrog/RootLayout.fxml
+++ b/src/com/buddyware/treefrog/RootLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="main_borderpane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.Main">
+<BorderPane fx:id="main_borderpane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.MainController">
    <top>
       <TabPane fx:id="main_tab_pane" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
@@ -32,6 +32,11 @@
             <Tab fx:id="about_view" text="About">
               <content>
                 <AnchorPane fx:id="about_anchorpane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Debug">
+              <content>
+                <fx:include fx:id="debug_view" source="debug/DebugView.fxml" />
               </content>
             </Tab>
         </tabs>
