Updates to Remote

--- a/src/com/buddyware/treefrog/remote/config/RemoteConfigView.fxml
+++ b/src/com/buddyware/treefrog/remote/config/RemoteConfigView.fxml
@@ -13,5 +13,7 @@
       <Label layoutX="95.0" layoutY="142.0" text="AWS ID" />
       <Label layoutX="95.0" layoutY="200.0" text="AWS Secret ID" />
       <Button layoutX="393.0" layoutY="329.0" mnemonicParsing="false" text="Save" />
+      <Button fx:id="connect_to_s3_button" layoutX="88.0" layoutY="317.0" mnemonicParsing="false" onAction="#on_click" text="Connect to S3" />
+      <ListView fx:id="BucketList" layoutX="343.0" layoutY="50.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
