--- a/src/com/buddyware/treefrog/filesystem/local/view/LocalConfigView.fxml
+++ b/src/com/buddyware/treefrog/filesystem/local/view/LocalConfigView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.local.config.LocalConfigController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.filesystem.local.view.LocalConfigController">
    <children>
       <SplitPane dividerPositions="0.3712374581939799" prefHeight="401.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
