--- a/src/com/buddyware/treefrog/filesystem/remote/view/RemoteConfigView.fxml
+++ b/src/com/buddyware/treefrog/filesystem/remote/view/RemoteConfigView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.remote.config.RemoteConfigController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.buddyware.treefrog.filesystem.remote.view.RemoteConfigController">
    <children>
       <Label layoutX="30.0" layoutY="45.0" text="Remote Config view" />
       <TextField layoutX="95.0" layoutY="93.0" prefHeight="25.0" prefWidth="234.0" />
