--- a/src/com/buddyware/treefrog/filesystem/view/AddFileSystem.fxml
+++ b/src/com/buddyware/treefrog/filesystem/view/AddFileSystem.fxml
@@ -14,9 +14,67 @@
          <children>
             <StackPane fx:id="wizardStackPane" prefHeight="315.0" prefWidth="447.0">
                <children>
+                  <Pane fx:id="page_three">
+                     <children>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8fc4e8" height="315.0" stroke="BLACK" strokeType="INSIDE" width="447.0" />
+                        <VBox alignment="TOP_CENTER" prefHeight="315.0" prefWidth="447.0" spacing="15.0">
+                           <children>
+                              <Label prefWidth="320.0" text="Connection details...." textAlignment="CENTER">
+                                 <font>
+                                    <Font name="DejaVu Sans Bold" size="25.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets left="15.0" top="25.0" />
+                                 </padding>
+                              </Label>
+                              <Label text="Username">
+                                 <font>
+                                    <Font name="DejaVu Sans Bold" size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="15.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="textUsername">
+                                 <VBox.margin>
+                                    <Insets left="30.0" right="30.0" />
+                                 </VBox.margin>
+                                 <font>
+                                    <Font name="DejaVu Sans Bold" size="18.0" />
+                                 </font>
+                              </TextField>
+                              <Label text="Password">
+                                 <font>
+                                    <Font name="DejaVu Sans Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="textPassword">
+                                 <VBox.margin>
+                                    <Insets left="30.0" right="30.0" />
+                                 </VBox.margin>
+                                 <font>
+                                    <Font name="DejaVu Sans Bold" size="18.0" />
+                                 </font>
+                              </TextField>
+                              <HBox alignment="BOTTOM_RIGHT" prefHeight="155.0" prefWidth="447.0">
+                                 <children>
+                                    <Button fx:id="buttonTest" alignment="BOTTOM_RIGHT" disable="true" mnemonicParsing="false" text="Test">
+                                       <font>
+                                          <Font size="25.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="15.0" right="15.0" />
+                                 </padding>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </Pane>
                   <Pane fx:id="page_two">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#afcdac" height="315.0" stroke="BLACK" strokeType="INSIDE" width="447.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8fc4e8" height="315.0" stroke="BLACK" strokeType="INSIDE" width="447.0" />
                         <VBox alignment="TOP_CENTER" prefHeight="315.0" prefWidth="447.0" spacing="15.0">
                            <children>
                               <Label prefWidth="320.0" text="Sync destination..." textAlignment="CENTER">
@@ -27,7 +85,7 @@
                                     <Insets left="15.0" top="25.0" />
                                  </padding>
                               </Label>
-                              <ComboBox fx:id="comboSyncTargets" prefHeight="77.0" prefWidth="377.0" />
+                              <ComboBox fx:id="comboSyncTargets" onAction="#onComboSyncTargetAction" prefHeight="77.0" prefWidth="377.0" stylesheets="@wizardCombobox.css" />
                            </children>
                         </VBox>
                      </children>
@@ -45,7 +103,7 @@
                                     <Insets left="15.0" top="25.0" />
                                  </padding>
                               </Label>
-                              <Button fx:id="buttonSyncToCloud" alignment="CENTER" mnemonicParsing="false" onAction="#chooseRemote" prefHeight="76.0" prefWidth="375.0" text="in the cloud" textAlignment="CENTER">
+                              <Button fx:id="syncToCloud" alignment="CENTER" mnemonicParsing="false" onAction="#chooseRemote" prefHeight="76.0" prefWidth="375.0" text="in the cloud" textAlignment="CENTER">
                                  <font>
                                     <Font name="DejaVu Sans" size="24.0" />
                                  </font>
@@ -59,13 +117,58 @@
                         </VBox>
                      </children>
                   </Pane>
+                  <StackPane fx:id="page_four" prefHeight="150.0" prefWidth="200.0">
+                     <children>
+                        <Pane fx:id="page_four_remote">
+                           <children>
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8fc4e8" height="315.0" stroke="BLACK" strokeType="INSIDE" width="447.0" />
+                              <VBox alignment="TOP_CENTER" prefHeight="315.0" prefWidth="447.0" spacing="15.0">
+                                 <children>
+                                    <Label prefWidth="320.0" text="Sync to..." textAlignment="CENTER">
+                                       <font>
+                                          <Font name="DejaVu Sans Bold" size="25.0" />
+                                       </font>
+                                       <padding>
+                                          <Insets left="15.0" top="25.0" />
+                                       </padding>
+                                    </Label>
+                                    <ComboBox fx:id="comboSyncTargets1" onAction="#onComboSyncTargetAction" prefHeight="77.0" prefWidth="377.0" stylesheets="@wizardCombobox.css" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="page_four_local">
+                           <children>
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8fc4e8" height="315.0" stroke="BLACK" strokeType="INSIDE" width="447.0" />
+                              <VBox alignment="TOP_CENTER" prefHeight="315.0" prefWidth="447.0" spacing="15.0">
+                                 <children>
+                                    <Label prefWidth="320.0" text="Sync to..." textAlignment="CENTER">
+                                       <font>
+                                          <Font name="DejaVu Sans Bold" size="25.0" />
+                                       </font>
+                                       <padding>
+                                          <Insets left="15.0" top="25.0" />
+                                       </padding>
+                                    </Label>
+                                    <ComboBox fx:id="comboSyncTargets11" onAction="#onComboSyncTargetAction" prefHeight="77.0" prefWidth="377.0" stylesheets="@wizardCombobox.css" />
+                                    <CheckBox contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="18.0" prefWidth="379.0" text="Create a &quot;bucketsync\&quot; folder here" visible="false">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </CheckBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </Pane>
+                     </children>
+                  </StackPane>
                </children>
             </StackPane>
             <HBox alignment="CENTER_RIGHT" spacing="8.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#prevPage" text="&lt; Back" />
-                  <Button mnemonicParsing="false" onAction="#nextPage" text="Next &gt;" />
-                  <Button mnemonicParsing="false" text="Cancel" />
+                  <Button fx:id="buttonLeft" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#backPage" text="&lt; Back" visible="false" />
+                  <Button fx:id="buttonMiddle" mnemonicParsing="false" onAction="#middleButtonClicked" text="Next &gt;" visible="false" />
+                  <Button fx:id="buttonRight" mnemonicParsing="false" text="Cancel" />
                </children>
                <padding>
                   <Insets bottom="15.0" right="15.0" top="15.0" />
