--- a/src/main/resources/FileSystemView2.fxml
+++ b/src/main/resources/FileSystemView2.fxml
@@ -11,52 +11,25 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.BorderPane?>
+<?scenebuilder-classpath-element ../../../target/classes?>
 
 <fx:root fx:id="fs_root" stylesheets="@application.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane fx:id="fs_split_pane" dividerPositions="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
-            <ScrollPane fitToHeight="true" fitToWidth="true">
+            <ScrollPane fitToHeight="true" fitToWidth="true" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="80.0">
                <content>
                   <VBox fx:id="fs_list" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
                      <padding>
                         <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                      </padding>
                      <children>
-                     	<!-- FilesystemWidget layoutX="5.0" layoutY="5.0" /-->
+                     	<!-- FileSystemWidget layoutX="5.0" layoutY="5.0" /-->
                      </children>
                   </VBox>
                </content>
             </ScrollPane>
-            <Pane fx:id="fs_right_pane">
-               <children>
-                  <Group layoutX="80.0" layoutY="130.0">
-                     <children>
-                        <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" mnemonicParsing="false" text="Button">
-                           
-                                          <graphic>
-                              <ImageView blendMode="SRC_OVER" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@fs_source.png" />
-                                 </image>   
-                               <effect>
-                                    <InnerShadow blurType="GAUSSIAN" />
-      	                     </effect>  
-                              </ImageView>
-                              </graphic>
-                            
-                        
-                              </Button>
-                        <Circle fill="#fff021" layoutX="95.0" layoutY="133.0" radius="10.0" stroke="TRANSPARENT" strokeType="INSIDE">
-                           <effect>
-                              <InnerShadow />
-                           </effect>
-                        </Circle>
-                     </children>
-                  </Group>
-               </children>
-            </Pane>
+            <AnchorPane fx:id="fs_right_pane" />
          </items>
       </SplitPane>
    </children>
