--- a/src/main/resources/FileSystemWidget.fxml
+++ b/src/main/resources/FileSystemWidget.fxml
@@ -11,20 +11,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?scenebuilder-classpath-element ../../target/classes?>
 
 <fx:root stylesheets="@application.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label fx:id="fs_label" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" layoutX="10.0" layoutY="10.0" minHeight="128.0" opacity="0.0" prefWidth="144.0" visible="false">
-               <graphic>
-                  <Region fx:id="fs_image" styleClass="filesystem" />
-               </graphic>
-            </Label>
-         </children>
+      <AnchorPane fx:id="root" minHeight="64.0" minWidth="64.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <styleClass>
-            <String fx:value="filesystem" />
-            <String fx:value="filesystem-amazon-s3" />
          </styleClass>
       </AnchorPane>
    </children>
