--- a/src/main/resources/FileSystemLink.fxml
+++ b/src/main/resources/FileSystemLink.fxml
@@ -13,62 +13,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<fx:root stylesheets="@application.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <SplitPane fx:id="fs_split_pane" dividerPositions="0.5" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <items>
-            <ScrollPane fitToHeight="true" fitToWidth="true">
-               <content>
-                  <VBox fx:id="fs_list" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="15.0">
-                     <padding>
-                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
-                     </padding>
-                     <children>
-                     	<!-- FilesystemWidget layoutX="5.0" layoutY="5.0" /-->
-                     </children>
-                  </VBox>
-               </content>
-            </ScrollPane>
-            <Pane fx:id="fs_right_pane">
-               <children>
-                  <Group>
-                     <children>
-                        <CubicCurve fx:id="mCurve" controlX1="-50.0" controlX2="50.0" controlY1="-100.0" controlY2="100.0" endX="150.0" fill="#1f93ff00" startX="-150.0" stroke="BLACK" />
-                        <Circle fx:id="curveStart" fill="#b5d1eb" onMouseDragged="#updateCurveStart" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
-                        <Circle fx:id="curveC2" fill="#ff2121" onMouseDragged="#updateCurveC2" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
-                        <Circle fx:id="curveEnd" fill="#f29f9f" onMouseDragged="#updateCurveEnd" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
-                        <Line fx:id="mLt_c2_end" endX="100.0" fill="#eb5656" startX="-100.0" stroke="#d03333" />
-                        <Line fx:id="mLt_start_c1" endX="100.0" fill="#296ec9" startX="-100.0" stroke="#2967c3" />
-                        <Circle fx:id="curveC1" fill="#2197ff" onMouseDragged="#updateCurveC1" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
-                     </children>
-                  </Group>
-                  <Group layoutX="80.0" layoutY="130.0">
-                     <children>
-                        <Button contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" mnemonicParsing="false" text="Button">
-                           
-                                          <graphic>
-                              <ImageView blendMode="SRC_OVER" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@fs_source.png" />
-                                 </image>   
-                               <effect>
-                                    <InnerShadow blurType="GAUSSIAN" />
-      	                     </effect>  
-                              </ImageView>
-                              </graphic>
-                            
-                        
-                              </Button>
-                        <Circle fill="#fff021" layoutX="95.0" layoutY="133.0" radius="10.0" stroke="TRANSPARENT" strokeType="INSIDE">
-                           <effect>
-                              <InnerShadow />
-                           </effect>
-                        </Circle>
-                     </children>
-                  </Group>
-               </children>
-            </Pane>
-         </items>
-      </SplitPane>
+      <CubicCurve fx:id="fs_link" controlX1="-50.0" controlX2="50.0" controlY1="-100.0" controlY2="100.0" endX="150.0" fill="#1f93ff00" startX="-150.0" stroke="BLACK" />
    </children>
 </fx:root>
