--- a/src/main/resources/FileSystemLink.fxml
+++ b/src/main/resources/FileSystemLink.fxml
@@ -13,9 +13,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<fx:root type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root stylesheets="@application.css" type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <CubicCurve fx:id="fs_link" controlX1="-50.0" controlX2="50.0" controlY1="-100.0" controlY2="100.0" endX="150.0" fill="#1f93ff00" startX="-150.0" stroke="BLACK" />
+      <CubicCurve fx:id="fs_link" controlX1="-50.0" controlX2="50.0" controlY1="-100.0" controlY2="100.0" endX="150.0" fill="#1f93ff00" startX="-150.0" stroke="BLACK" styleClass="fs-link" />
    </children>
 </fx:root>
