Implemented state serialization.  Code cleanup

--- a/src/main/resources/FileSystemNode.fxml
+++ b/src/main/resources/FileSystemNode.fxml
@@ -22,7 +22,7 @@
                <children>
                   <AnchorPane fx:id="fs_node_title" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0">
                      <children>
-                        <Label alignment="CENTER" minHeight="25.0" text="Label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <Label fx:id="fs_node_title_bar" alignment="CENTER" minHeight="25.0" text="Label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <styleClass>
                               <String fx:value="top-rounded-widget" />
                               <String fx:value="fs-node-title-bar" />
