--- a/src/main/resources/FileSystemConfig.fxml
+++ b/src/main/resources/FileSystemConfig.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -10,13 +11,44 @@
    <bottom>
       <HBox alignment="BOTTOM_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Apply" />
-            <Button mnemonicParsing="false" text="Done" />
-            <Button mnemonicParsing="false" text="Cancel" />
+            <Button fx:id="button_apply" mnemonicParsing="false" text="Apply" />
+            <Button fx:id="button_done" mnemonicParsing="false" text="Done" />
+            <Button fx:id="button_cancel" mnemonicParsing="false" text="Cancel" />
          </children>
          <padding>
             <Insets bottom="5.0" right="10.0" />
          </padding>
       </HBox>
    </bottom>
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" spacing="30.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="43.0" prefWidth="425.0">
+               <children>
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Properties" textAlignment="CENTER">
+                     <padding>
+                        <Insets top="15.0" />
+                     </padding>
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+               <children>
+                  <Label text="Name">
+                     <padding>
+                        <Insets top="5.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="node_name" alignment="CENTER_RIGHT" />
+               </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
